Addressed PR fixes learn more spacing

--- a/frontend/src/app/commonComponents/DataRetentionModal.scss
+++ b/frontend/src/app/commonComponents/DataRetentionModal.scss
@@ -30,6 +30,6 @@
   }
 
   .sr-learn-more-icon {
-    margin-left: 0.2rem;
+    margin-left: -0.2rem;
   }
 }
